<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_payment">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="63dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPay">

        <ImageView
            android:id="@+id/payment_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nav_home" />

        <ImageView
            android:id="@+id/payment_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nav_health" />

        <ImageView
            android:id="@+id/payment_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nav_shop" />

        <ImageView
            android:id="@+id/payment_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nav_profile" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPay"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/btnPay"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/hntNameOnCard"
        android:layout_width="316dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/dark_purple"
        android:ems="10"
        android:hint="@string/hntNameOnCard"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNameOnCard" />

    <EditText
        android:id="@+id/hntExpDate"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:backgroundTint="@color/dark_purple"
        android:ems="10"
        android:hint="@string/hntExpDate"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelExpDate" />

    <TextView
        android:id="@+id/labelCardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="4dp"
        android:text="@string/labelCardNum"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_title" />

    <TextView
        android:id="@+id/labelExpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/labelExpDate"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntNameOnCard" />

    <TextView
        android:id="@+id/labelDeliveryName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/labelcvc"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntNameOnCard" />

    <TextView
        android:id="@+id/labelNameOnCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/labelNameOnCard"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntCardNum" />

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/payment_title"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_top_edit_profile10" />

    <ImageView
        android:id="@+id/img_top_edit_profile10"
        android:layout_width="410dp"
        android:layout_height="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_top" />

    <ImageView
        android:id="@+id/paymentArrowBack"
        android:layout_width="42dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_top_edit_profile10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_top_edit_profile10"
        app:srcCompat="@drawable/arrowback" />

    <TextView
        android:id="@+id/Payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Payment"
        android:textColor="@color/dark_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_top_edit_profile10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hntCardNum"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="58dp"
        android:backgroundTint="@color/dark_purple"
        android:ems="10"
        android:hint="@string/hntCardNum"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCardNum" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntExpDate"
        app:srcCompat="@drawable/payment_img" />

    <EditText
        android:id="@+id/hntcvc"
        android:layout_width="66dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_purple"
        android:ems="10"
        android:hint="@string/hntcvc"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDeliveryName5" />

    <TextView
        android:id="@+id/payment_totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_totalValue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_deliveryFeeValue" />

    <TextView
        android:id="@+id/payment_subTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/payment_subTotalValue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/payment_deliveryFeeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:text="@string/payment_deliveryFeeValue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_subTotalValue" />

    <TextView
        android:id="@+id/payment_DeliveryFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_DeliveryFee"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/payment_SubTotal" />

    <TextView
        android:id="@+id/payment_txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/payment_txtTotal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_DeliveryFee" />

    <TextView
        android:id="@+id/payment_SubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_SubTotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>